# 1password-python

./: LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: black-formatter.yml  black.yml  generate_docs.yml  github_pages.yml  pytest.yml
docs/: onepassword.html
docs/onepassword/: exceptions.html  index.html
onepassword/: __init__.py  exceptions.py  onepassword.py  pyproject.toml
setup/: github-actions.txt  requirements-dev.txt  requirements.txt
tests/integration/: test_onepassword.py
tests/unit/: test_onepassword.py
